--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RusEngWords</string>
+    <string name="add_shop_item_content_description">Add new word</string>
 </resources>
